# AI-WORKSPACE

./: .env  .env.example  Building and Backtesting Strategies.md  MOC - Trading.md  Niche Trading Strategies II.md  Niche Trading Strategies.md  Order Flow.md  README.md  Volume Profile.md  agents.md  memory.md  pull.bat  pyproject.toml  test.md
.obsidian/: community-plugins.json  graph.json  workspace.json
Concepts/: Absorption.md  Auction Market Theory.md  Backtesting.md  Composite Profiles.md  Delta Divergence.md  Fading the Edges of Balance.md  HVN vs LVN Actionability.md  Head Fakes (Retail Traps).md  Iceberg Orders.md  Market Microstructure.md  Market Regime Context.md  Markov Property.md  Order Book.md  Order Flow.md  Positioning vs Context.md  Spoofing and Layering.md  Strategy Development.md  Structure vs Flow.md  The Proximity Principle.md  The Throwback (Post-Breakout Retest).md  Value Area.md
Reflections/: Volume Profile - Key Insights.md
Strategies/: All Strategies Backtest.md  Funded 80% Pass Strategy.md  Hedge Fund Markov Method.md  IBS Mean Reversion.md  QQQ Dual-Signal Edge.md  README.md  Volume Profile Throwback.md  Volume-Scaled IBS.md  brute_force2.py  brute_force3.py  combine_test.py  compare_garch.py  find_sharpe13.py  funded_80_pass.py  funded_edge.py  funded_edge3.py  honest_scan.py  ibs_backtest.py  intraday_1h_test.py  intraday_test.py  lvpr_funded_reversion.md  optimize_lvpr.py  optimize_vp_fade_5m.py  optimize_vwap_5m.py  rotation_validate.py  run_all.py  run_strategy.py  test_hft_1m.py  unique_edge.py  volume_scaled_ibs.py  (+1 more)
(+741 files in other folders)
