[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-vault"
version = "0.1.0"
description = "Unified backtest framework and agent orchestration for the trading vault."
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backtest*", "orchestrator*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
